--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AHMAD SHAFI RAHMAN</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>THIS IS A PORTFOLIO WEBSITE.</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><SPAN class="name-color">Ahmad Shafi's</SPAN> Website</h1>
+            <h3>World class professional web developer.</h3>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+        </div>
+        <div class="half-width">
+            <img src="images/profile01.png" alt="">
+        </div>
+        
+    </section>
+    
 </body>
 </html>
